--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <p class="about-us">
       Tired of living in the styles of the last century?  Is your wallpaper fading?  Tired of the chartreuse walls?  <span class="super-amazing"> Super Amazing Interior Designs </span>can save you from your distress!
     </p>
-    <div class="column"><div class="content">
+    <div class="column"><div class="content color1">
       <img src="img/before.jpg">
       <p class="title">Before</p>
       <p class="under">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain</p>
     </div></div>
 
-    <div class="column"><div class="content">
+    <div class="column"><div class="content color2">
       <img src="img/during.jpg">
       <p class="title">During</p>
       <p class="under">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain</p>
     </div>
     </div>
 
-    <div class="column"><div class="content">
+    <div class="column"><div class="content color3">
       <img src="img/after.jpg">
       <p class="title">After</p>
       <p class="under">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain</p>
